--- a/.classpath
+++ b/.classpath
@@ -20,8 +20,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-tx-5.3.19.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-web-5.5.6.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-crypto-5.5.6.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/aspectjweaver-1.9.7.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/classmate-1.5.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-fileupload-1.4.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-validator-6.2.0.Final.jar"/>
@@ -50,5 +48,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-config-5.5.6.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-core-5.5.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Acer/Downloads/Telegram Desktop/pdfbox-2.0.17.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/javax.mail-api-1.6.2.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-context-support-5.3.24.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
