--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -30,7 +30,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jBCrypt-0.4.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jboss-logging-3.4.3.Final.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/JAVA 53/Jars/Lib for spring version 5.3.19/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="D:/JWD-54/Jars/mysql-connector-java-8.0.16.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/slf4j-api-1.7.32.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-aop-5.3.19.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-aspects-5.3.19.jar"/>
@@ -49,6 +49,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-oxm-5.3.19.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-config-5.5.6.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-core-5.5.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Phyo Han Kyaw/Downloads/pdfbox-2.0.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mmtha/Downloads/pdfbox-2.0.17.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
